--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,128 @@
-appstate here
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261575645864835%22%3A%22GNuBhXgh%22%2C%22100089672749376%22%3A%22ow4wo91E%22%2C%2261575645030953%22%3A%22nkTsS1W9%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "datr",
+        "value": "2I4JaEcotgmMvY_iLAeeGHQ9",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "sb",
+        "value": "2I4JaFu1DqYugX7oH-jt2fEr",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B710x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x710",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61575645030953",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "fr",
+        "value": "0mg5ZdGgSBzOeePkj.AWcv5IrzNxtagNqSTnGsLshrmuFmZKIUVzCem-AGpAQX0F61IrY.BoCY7Y..AAA.0.0.BoCdqp.AWfkF38PIUubxnwqmwb8FStTkvA",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "xs",
+        "value": "36%3An1Ykqwa3wsr6IQ%3A2%3A1745476267%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101622762%3BT%3A29091271",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2795%3Btimestamp%3A1745476316",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T06:32:02.552Z",
+        "lastAccessed": "2025-04-24T06:32:02.552Z"
+    }
+]
